styles.css
body {
  --remove-button-color: crimson;
  --button-hover-color: rgba(0, 0, 0, 0.05);
  --star-color: #ffbb00;
}

body.dark-mode {
  --remove-button-color: tomato;
  --button-hover-color: rgba(255, 255, 255, 0.05);
}

/* Star button. */
.ccss-star-btn {
  align-items: center;
  display: inline-flex;
  background: none;
  border: none;
  border-radius: 50%;
  color: var(--text-default);
  cursor: pointer;
  font-size: 16px;
  height: 24px;
  justify-content: center;
  margin-inline-end: 4px;
  transition: color 0.2s;
  width: 24px;
}

.ccss-star-btn:hover {
  background-color: var(--button-hover-color);
}

.ccss-star-btn.starred {
  color: var(--star-color);
}

/* Dashboard. */
.ccss-dashboard {
  background: transparent;
  border: 1px solid var(--card-border, lightgray);
  border-radius: 5px;
  padding: 16px;
  width: 100%;
}

.ccss-dashboard.hidden {
  display: none;
}

.ccss-dashboard h3 {
  margin-top: 0;
  color: var(--text-default, black);
}

.ccss-divider {
  border: none;
  height: 1px;
  background-color: rgba(190, 190, 190, 0.5);
  margin: 10px 0 4px 0;
}

.ccss-list {
  list-style: none;
  padding: 0;
}

.ccss-list li {
  padding: 8px 0;
  border-bottom: 1px solid rgba(190, 190, 190, 0.25);
  display: flex;
  justify-content: space-between;
}

.ccss-list li:last-child {
  border-bottom: none;
  padding-bottom: 0;
}

.ccss-list a {
  text-decoration: none;
  color: var(--primary-default, dodgerblue);
  font-family: "Roboto Mono", monospace;
}

.ccss-remove {
  font-family: "Roboto Mono", monospace;
  cursor: pointer;
  color: var(--remove-button-color);
  font-size: 12px;
  margin-left: 10px;
}

